--- a/pages/dashboard/sections/calendario/calendario.css
+++ b/pages/dashboard/sections/calendario/calendario.css
@@ -50,7 +50,7 @@ nav ul li a {
     padding: 12px;
     border-radius: 8px;
     background: linear-gradient(90deg, #ff6f61, #ff9a8b);
-    transition: background 0.3s, padding 0.3s, transform 0.3s;
+    transition: 0.3s, padding 0.3s, transform 0.3s;
 }
 
 nav ul li.active a {
