--- a/pages/dashboard/dashboard.css
+++ b/pages/dashboard/dashboard.css
@@ -1,5 +1,3 @@
-/* styles.css */
-
 body {
   margin: 0;
   font-family: "Nunito", sans-serif;
@@ -8,31 +6,45 @@ body {
 }
 
 .sidebar {
-  width: 250px;
+  width: 270px;
   height: 100vh;
   position: relative;
   top: 0;
   left: 0;
-  padding: 20px; /* Padding interno del sidebar */
-  background-color: #191918; /* Color de fondo del sidebar */
+  padding: 20px; 
+  background-color: #191918; 
 }
 
 .user-profile {
-  background-color: rgba(255, 255, 255, 0.05); /* Blanco con 5% de opacidad */
+  background-color: rgba(255, 255, 255, 0.05); 
   color: white;
   height: 48px;
   display: flex;
   align-items: center;
   padding: 0 10px;
   border-radius: 10px;
+  justify-content: space-between;
 }
 
+.logout-icon {
+  color: #ffffff; /* Color del icono */
+  font-size: 18px; /* Tamaño del icono */
+  text-decoration: none; /* Sin subrayado */
+  margin-left: 10px; /* Espacio a la izquierda del icono */
+}
+
+.logout-icon:hover {
+  color: #c2c5b9; /* Cambia el color al pasar el mouse */
+}
+
+/* FOTO DE PERFIL */
 .profile-pic {
   width: 32px;
   height: 32px;
   object-fit: cover;
 }
 
+/* INFO DEL USUARIO(NOMBRE, ROL) */
 .user-info {
   flex-grow: 1;
   font-weight: bold;
@@ -49,6 +61,7 @@ body {
   font-size: 9px;
 }
 
+/* ITEM DEL SIDEBAR */
 .nav-link {
   color: #9f9fa8;
   font-weight: 600;
@@ -91,5 +104,3 @@ body {
 .content-section:target {
   display: block; /* Muestra la sección cuando el id coincide con el hash en la URL */
 }
-
-
