--- a/pages/dashboard/sections/calendario/calendario.css
+++ b/pages/dashboard/sections/calendario/calendario.css
@@ -11,8 +11,9 @@ body {
 }
 
 .container {
+  height: 100%;
+  width: 100%;
   display: flex;
-  width: 90%;
   background-color: #2d2d2d;
   border-radius: 12px;
   overflow: hidden;
