--- a/pages/dashboard/sections/estadisticas/estadisticas.css
+++ b/pages/dashboard/sections/estadisticas/estadisticas.css
@@ -1,47 +1,50 @@
 /* General Styles */
 body {
-    background-color: #f8f9fa;
-    font-family: 'Arial', sans-serif;
+  background-color: #121212;
+  font-family: "Arial", sans-serif;
 }
 
 .stat-value {
-    font-size: 2rem;
-    font-weight: bold;
-    color: #333;
+  font-size: 2rem;
+  font-weight: bold;
+  color: #fff; /* Cambiado a blanco */
 }
 
 .stat-label {
-    font-size: 1rem;
-    color: #777;
+  font-size: 1rem;
+  color: #ccc; /* Cambiado a un gris claro para contraste */
 }
 
 .icon {
-    font-size: 2.5rem;
-    color: #1b3c64;
-    margin-bottom: 10px;
+  font-size: 2.5rem;
+  color: #4576b2;
+  margin-bottom: 10px;
 }
 
+/* Estilo para las tarjetas */
 .card {
-    border-radius: 10px;
-    padding: 20px;
-    transition: transform 0.2s ease;
+  background-color: #2c2c2c; /* Color de fondo de las tarjetas */
+  color: #fff; /* Texto blanco dentro de las tarjetas */
+  border-radius: 10px;
+  padding: 20px;
+  transition: transform 0.2s ease;
 }
 
 .card:hover {
-    transform: translateY(-5px);
+  transform: translateY(-5px);
 }
 
 /* Media Queries */
 @media (max-width: 768px) {
-    .stat-value {
-        font-size: 1.6rem;
-    }
+  .stat-value {
+    font-size: 1.6rem;
+  }
 
-    .stat-label {
-        font-size: 0.9rem;
-    }
+  .stat-label {
+    font-size: 0.9rem;
+  }
 
-    .icon {
-        font-size: 2rem;
-    }
+  .icon {
+    font-size: 2rem;
+  }
 }
