--- a/pages/dashboard/sections/notificaciones/notificaciones.css
+++ b/pages/dashboard/sections/notificaciones/notificaciones.css
@@ -1,41 +1,30 @@
-body {
-  font-family: Arial, sans-serif;
-  background-color: #121212;
-  color: #e0e0e0;
-  margin: 0;
-  padding: 0;
-}
-
 .container {
   width: 100%;
-}
-
-h1 {
-  color: #ffffff;
-  margin-bottom: 20px;
-  border-bottom: 2px solid #3f3f3f;
-  padding-bottom: 10px;
-  font-size: 24px;
+  padding: 0; /* Elimina el padding por defecto */
+  margin: 0; /* Elimina el margen por defecto */
 }
 
 .notifications-wrapper {
   width: 100%;
-  margin: 0 auto;
+  padding: 0; /* Elimina el padding por defecto */
+  margin: 0; /* Elimina el margen por defecto */
 }
 
 .notifications-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 10px; /* Espacio entre las tarjetas */
+  padding: 0; /* Elimina el padding por defecto */
+  margin: 0; /* Elimina el margen por defecto */
 }
 
 .card {
   background-color: #2c2c2c;
   color: #e0e0e0;
   border: none;
-  margin-bottom: 10px; /* Reducido el margen inferior de las tarjetas */
+  margin-bottom: 10px; /* Espacio debajo de cada tarjeta */
   width: 100%;
-  max-width: 260px; /* Ajustado el ancho máximo de las tarjetas */
+  max-width: 260px; /* Ajusta el ancho máximo de las tarjetas */
 }
 
 .card-body {
