--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ img.img-fluid {
 
 /* Estilo para el botón cuando se pasa el ratón sobre él */
 .btn:hover {
-  background-color: #00616f;
+  background-color: #307c87;
   color: white;
 }
 
